--- a/index.html
+++ b/index.html
@@ -48,88 +48,26 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
     <style>
-        /* Add the updated About Me section CSS here */
-        #fh5co-about {
-            background-color: #f5f5f5;
-            padding: 100px 0;
-            font-family: 'Space Mono', monospace;
-            border-top: 1px solid #ddd;
-            border-bottom: 1px solid #ddd;
+        /* Centered and scaled profile image */
+        .profile-thumb {
+            width: 250px; /* Set the width */
+            height: 250px; /* Set the height */
+            margin: 0 auto 30px; /* Center the image horizontally */
+            background-size: cover; /* Ensure the image covers the container */
+            background-position: center; /* Center the image within the container */
+            border-radius: 50%; /* Circular image */
+            border: 6px solid #fff; /* White border */
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+            display: flex; /* Use flexbox for centering */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            overflow: hidden; /* Ensure the image stays within the circular boundary */
         }
 
-        #fh5co-about h2 {
-            font-size: 48px;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 40px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        #fh5co-about p {
-            font-size: 18px;
-            color: #555;
-            margin-bottom: 25px;
-            line-height: 1.8;
-        }
-
-        #fh5co-about .info {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        #fh5co-about .info li {
-            margin-bottom: 20px;
-            font-size: 16px;
-            color: #444;
-        }
-
-        #fh5co-about .info li i {
-            margin-right: 15px;
-            color: #007bff;
-            font-size: 20px;
-        }
-
-        #fh5co-about .col-md-8 h3 {
-            font-size: 32px;
-            color: #333;
-            margin-bottom: 25px;
-            font-weight: bold;
-        }
-
-        #fh5co-about .col-md-8 p {
-            font-size: 18px;
-            color: #555;
-            margin-bottom: 25px;
-            line-height: 1.8;
-        }
-
-        #fh5co-about .fh5co-social-icons {
-            margin-top: 30px;
-        }
-
-        #fh5co-about .fh5co-social-icons a i {
-            font-size: 24px;
-            color: #007bff;
-            transition: color 0.3s ease, transform 0.3s ease;
-        }
-
-        #fh5co-about .fh5co-social-icons a i:hover {
-            color: #0056b3;
-            transform: scale(1.1);
-        }
-
-        /* Add zoom-in effect for words */
-        #fh5co-about .col-md-8 p span {
-            display: inline-block;
-            transition: transform 0.3s ease;
-        }
-
-        #fh5co-about .col-md-8 p span:hover {
-            transform: scale(1.2); /* Zoom in effect */
-            cursor: pointer; /* Indicates the word is interactive */
+        .profile-thumb img {
+            width: 100%; /* Ensure the image fills the container */
+            height: 100%; /* Ensure the image fills the container */
+            object-fit: cover; /* Ensure the image covers the container without distortion */
         }
     </style>
 </head>
@@ -147,7 +85,9 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-                                <div class="profile-thumb" style="background: url('images/user-3.jpg');"></div>
+                                <div class="profile-thumb">
+                                    <img src="images/user-3.jpg" alt="Menna Elwan">
+                                </div>
                                 <h1><span>Menna Elwan</span></h1>
                                 <span class="cd-intro">
                                     <span class="cd-headline clip is-full-width">
@@ -194,10 +134,10 @@
                     <div class="col-md-8" style="padding-left: 30px;">
                         <h3>Hello There!</h3>
                         <p>
-                            <span>I</span> <span>am</span> <span>a</span> <span>Mobile</span> <span>Developer</span> <span>with</span> <span>expertise</span> <span>in</span> <span>cross-platform</span> <span>app</span> <span>development</span> <span>using</span> <span><strong>Java</strong></span>, <span><strong>Dart</strong></span>, <span><strong>Kotlin</strong></span>, <span>and</span> <span><strong>Swift</strong></span>. <span>Skilled</span> <span>in</span> <span>optimizing</span> <span>app</span> <span>performance</span>, <span>integrating</span> <span>backend</span> <span>services</span>, <span>and</span> <span>enhancing</span> <span>user</span> <span>experience</span>. <span>I</span> <span>am</span> <span>committed</span> <span>to</span> <span>delivering</span> <span><strong>high-quality</strong></span>, <span><strong>secure</strong></span>, <span>and</span> <span><strong>scalable</strong></span> <span>applications</span> <span>that</span> <span>meet</span> <span>both</span> <span>user</span> <span>needs</span> <span>and</span> <span>business</span> <span>objectives</span>.
+                            I am a Mobile Developer with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. Skilled in optimizing app performance, integrating backend services, and enhancing user experience. I am committed to delivering <strong>high-quality, secure, and scalable applications</strong> that meet both user needs and business objectives.
                         </p>
                         <p>
-                            <span>Currently</span> <span>pursuing</span> <span>a</span> <span><strong>Bachelor’s</strong></span> <span>degree</span> <span>in</span> <span><strong>Computer</strong></span> <span><strong>Science</strong></span> <span>and</span> <span><strong>Artificial</strong></span> <span><strong>Intelligence</strong></span> <span>at</span> <span><strong>Benha</strong></span> <span><strong>University</strong></span>, <span>with</span> <span>an</span> <span>expected</span> <span>graduation</span> <span>in</span> <span><strong>2026</strong></span>. <span>I</span> <span>am</span> <span>actively</span> <span>building</span> <span>a</span> <span>strong</span> <span>foundation</span> <span>in</span> <span>software</span> <span>development</span> <span>and</span> <span>emerging</span> <span>technologies</span> <span>to</span> <span>drive</span> <span>innovation</span> <span>in</span> <span>the</span> <span>field</span> <span>of</span> <span>mobile</span> <span>applications</span>.
+                            Currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, with an expected graduation in <strong>2026</strong>. I am actively building a strong foundation in software development and emerging technologies to drive innovation in the field of mobile applications.
                         </p>
                         <div style="margin-top: 30px;">
                             <ul class="fh5co-social-icons">
