--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            font-family: 'Space Mono', monospace;
         }
 
         #fh5co-about .info li {
             margin-bottom: 20px;
             font-size: 16px;
             color: #444;
+            list-style: none;
+            padding-left: 0;
         }
 
         #fh5co-about .info li i {
@@ -114,33 +117,19 @@
             font-size: 20px;
         }
 
-        #fh5co-about .col-md-8 h3 {
-            font-size: 32px;
+        #fh5co-about .info li strong {
             color: #333;
-            margin-bottom: 25px;
             font-weight: bold;
         }
 
-        #fh5co-about .col-md-8 p {
-            font-size: 18px;
-            color: #555;
-            margin-bottom: 25px;
-            line-height: 1.8;
-        }
-
-        #fh5co-about .fh5co-social-icons {
-            margin-top: 30px;
-        }
-
-        #fh5co-about .fh5co-social-icons a i {
-            font-size: 24px;
+        #fh5co-about .info li a {
             color: #007bff;
-            transition: color 0.3s ease, transform 0.3s ease;
+            text-decoration: none;
+            transition: color 0.3s ease;
         }
 
-        #fh5co-about .fh5co-social-icons a i:hover {
+        #fh5co-about .info li a:hover {
             color: #0056b3;
-            transform: scale(1.1);
         }
 
         /* Zoom-in effect for words in About Me section */
@@ -252,10 +241,10 @@
                     <div class="col-md-8" style="padding-left: 30px;">
                         <h3>Hello There!</h3>
                         <p>
-                            <span>I</span> <span>am</span> <span>a</span> <span>Mobile</span> <span>Developer</span> <span>with</span> <span>expertise</span> <span>in</span> <span>cross-platform</span> <span>app</span> <span>development</span> <span>using</span> <span><strong>Java</strong></span>, <span><strong>Dart</strong></span>, <span><strong>Kotlin</strong></span>, <span>and</span> <span><strong>Swift</strong></span>. <span>Skilled</span> <span>in</span> <span>optimizing</span> <span>app</span> <span>performance</span>, <span>integrating</span> <span>backend</span> <span>services</span>, <span>and</span> <span>enhancing</span> <span>user</span> <span>experience</span>. <span>I</span> <span>am</span> <span>committed</span> <span>to</span> <span>delivering</span> <span><strong>high-quality</strong></span>, <span><strong>secure</strong></span>, <span>and</span> <span><strong>scalable</strong></span> <span>applications</span> <span>that</span> <span>meet</span> <span>both</span> <span>user</span> <span>needs</span> <span>and</span> <span>business</span> <span>objectives</span>.
+                            I am a Mobile Developer with expertise in cross-platform app development using <strong>Java, Dart, Kotlin, and Swift</strong>. Skilled in optimizing app performance, integrating backend services, and enhancing user experience. I am committed to delivering <strong>high-quality, secure, and scalable applications</strong> that meet both user needs and business objectives.
                         </p>
                         <p>
-                            <span>Currently</span> <span>pursuing</span> <span>a</span> <span><strong>Bachelor’s</strong></span> <span>degree</span> <span>in</span> <span><strong>Computer</strong></span> <span><strong>Science</strong></span> <span>and</span> <span><strong>Artificial</strong></span> <span><strong>Intelligence</strong></span> <span>at</span> <span><strong>Benha</strong></span> <span><strong>University</strong></span>, <span>with</span> <span>an</span> <span>expected</span> <span>graduation</span> <span>in</span> <span><strong>2026</strong></span>. <span>I</span> <span>am</span> <span>actively</span> <span>building</span> <span>a</span> <span>strong</span> <span>foundation</span> <span>in</span> <span>software</span> <span>development</span> <span>and</span> <span>emerging</span> <span>technologies</span> <span>to</span> <span>drive</span> <span>innovation</span> <span>in</span> <span>the</span> <span>field</span> <span>of</span> <span>mobile</span> <span>applications</span>.
+                            Currently pursuing a <strong>Bachelor’s degree in Computer Science and Artificial Intelligence</strong> at <strong>Benha University</strong>, with an expected graduation in <strong>2026</strong>. I am actively building a strong foundation in software development and emerging technologies to drive innovation in the field of mobile applications.
                         </p>
                         <div style="margin-top: 30px;">
                             <ul class="fh5co-social-icons">
