--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
             background-color: #000080; /* Darker navy blue on hover */
             transform: translateY(-3px);
         }
+
+        /* Add this CSS rule to change the text color to navy blue */
+        .meena-elvan-text {
+            color: navy; /* Navy blue color */
+        }
     </style>
 </head>
 
@@ -212,6 +217,8 @@
                                         <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
                                     </ul>
                                 </p>
+                                <!-- Add the text here with the class for navy blue color -->
+                                <p class="meena-elvan-text">Meena Elvan - in</p>
                             </div>
                         </div>
                     </div>
