--- a/index.html
+++ b/index.html
@@ -182,18 +182,22 @@
             display: inline-block;
             position: relative;
             text-align: left;
+            width: 100%;
         }
 
         .cd-words-wrapper b {
             display: inline-block;
             position: absolute;
-            white-space: nowrap;
+            white-space: normal; /* Allow text to wrap */
             left: 0;
             top: 0;
+            width: 100%; /* Ensure text takes full width */
+            opacity: 0;
         }
 
         .cd-words-wrapper b.is-visible {
             position: relative;
+            opacity: 1;
         }
 
         .cd-headline.clip .cd-words-wrapper {
