--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         #fh5co-started p {
             font-size: 18px;
             margin-bottom: 30px;
+            line-height: 1.6;
         }
 
         #fh5co-started .btn {
@@ -193,6 +194,7 @@
             top: 0;
             width: 100%; /* Ensure text takes full width */
             opacity: 0;
+            transition: opacity 0.5s ease-in-out;
         }
 
         .cd-words-wrapper b.is-visible {
@@ -221,6 +223,16 @@
 
         .cd-headline.clip b.is-visible {
             opacity: 1;
+        }
+
+        /* Ensure 7 words per line */
+        .cd-words-wrapper b {
+            word-wrap: break-word;
+            word-break: break-word;
+            white-space: pre-wrap;
+            display: inline-block;
+            width: 100%;
+            text-align: center;
         }
     </style>
 </head>
@@ -359,6 +371,13 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrLr8R9clIILTHQs7Uflr2B0BMXAX9lxHUrZh6OuvQ=="
         crossorigin=""></script>
         <script src="js/main.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('.cd-headline').animatedHeadline({
+                    animationType: 'clip'
+                });
+            });
+        </script>
     </div>
 </body>
 
