--- a/index.html
+++ b/index.html
@@ -182,17 +182,14 @@
             display: inline-block;
             position: relative;
             text-align: left;
-            max-width: 800px; /* Limit the width of the animated text */
-            margin: 0 auto; /* Center the text */
         }
 
         .cd-words-wrapper b {
             display: inline-block;
             position: absolute;
-            white-space: normal; /* Allow text to wrap */
+            white-space: nowrap;
             left: 0;
             top: 0;
-            width: 100%; /* Ensure text takes full width */
         }
 
         .cd-words-wrapper b.is-visible {
@@ -311,12 +308,14 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2>Work With Me</h2>
-                        <div class="cd-headline clip is-full-width">
-                            <span class="cd-words-wrapper">
-                                <b class="is-visible">Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.</b>
-                                <b>With a passion for innovation and a focus on efficiency, I specialize in delivering top-notch mobile app solutions tailored to your needs. Whether you’re starting from scratch with a complete app design, optimizing an existing project, or integrating advanced backend systems, I’m here to make it happen.</b>
+                        <p>
+                            <span class="cd-headline clip is-full-width">
+                                <span class="cd-words-wrapper">
+                                    <b class="is-visible">Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.</b>
+                                    <b>With a passion for innovation and a focus on efficiency, I specialize in delivering top-notch mobile app solutions tailored to your needs. Whether you’re starting from scratch with a complete app design, optimizing an existing project, or integrating advanced backend systems, I’m here to make it happen.</b>
+                                </span>
                             </span>
-                        </div>
+                        </p>
                         <p>
                             <a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download My CV</a>
                         </p>
