--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
         #fh5co-started p {
             font-size: 18px;
             margin-bottom: 30px;
+            line-height: 1.5; /* Adjusted line height */
+            text-align: left; /* Align text to the left */
+            max-width: 600px; /* Set a max-width to control the text width */
+            margin-left: auto; /* Center the text block */
+            margin-right: auto; /* Center the text block */
         }
 
         #fh5co-started .btn {
@@ -309,12 +314,7 @@
                     <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>Work With Me</h2>
                         <p>
-                            <span class="cd-headline clip is-full-width">
-                                <span class="cd-words-wrapper">
-                                    <b class="is-visible">Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.</b>
-                                    <b>With a passion for innovation and a focus on efficiency, I specialize in delivering top-notch mobile app solutions tailored to your needs. Whether you’re starting from scratch with a complete app design, optimizing an existing project, or integrating advanced backend systems, I’m here to make it happen.</b>
-                                </span>
-                            </span>
+                            LET'S BRING YOUR IDEAS TO LIFE WITH INNOVATIVE AND EFFICIENT MOBILE APP SOLUTIONS. WHETHER YOU'RE LOOKING FOR A COMPLETE APP DESIGN, OPTIMIZATION OF YOUR CURRENT PROJECT, OR BACKEND INTEGRATIONS, I’M HERE TO HELP. LET’S COLLABORATE AND CREATE SOMETHING REMARKABLE TOGETHER.
                         </p>
                         <p>
                             <a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download My CV</a>
