--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             font-size: 18px;
             margin-bottom: 30px;
             line-height: 1.5; /* Adjusted line height */
-            text-align: left; /* Align text to the left */
-            max-width: 600px; /* Set a max-width to control the text width */
+            text-align: center; /* Center the text */
+            max-width: 800px; /* Set a max-width to control the text width */
             margin-left: auto; /* Center the text block */
             margin-right: auto; /* Center the text block */
         }
@@ -175,6 +175,8 @@
             text-transform: uppercase;
             border-radius: 30px;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            display: block; /* Make the button a block element */
+            margin: 0 auto; /* Center the button */
         }
 
         #fh5co-started .btn:hover {
@@ -186,7 +188,7 @@
         .cd-words-wrapper {
             display: inline-block;
             position: relative;
-            text-align: left;
+            text-align: center;
         }
 
         .cd-words-wrapper b {
@@ -195,10 +197,12 @@
             white-space: nowrap;
             left: 0;
             top: 0;
+            opacity: 0;
         }
 
         .cd-words-wrapper b.is-visible {
             position: relative;
+            opacity: 1;
         }
 
         .cd-headline.clip .cd-words-wrapper {
@@ -314,7 +318,12 @@
                     <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>Work With Me</h2>
                         <p>
-                            LET'S BRING YOUR IDEAS TO LIFE WITH INNOVATIVE AND EFFICIENT MOBILE APP SOLUTIONS. WHETHER YOU'RE LOOKING FOR A COMPLETE APP DESIGN, OPTIMIZATION OF YOUR CURRENT PROJECT, OR BACKEND INTEGRATIONS, I’M HERE TO HELP. LET’S COLLABORATE AND CREATE SOMETHING REMARKABLE TOGETHER.
+                            <span class="cd-headline clip is-full-width">
+                                <span class="cd-words-wrapper">
+                                    <b class="is-visible">LET'S BRING YOUR IDEAS TO LIFE WITH INNOVATIVE AND EFFICIENT MOBILE APP SOLUTIONS. WHETHER YOU'RE LOOKING FOR A COMPLETE APP DESIGN, OPTIMIZATION OF YOUR CURRENT PROJECT, OR BACKEND INTEGRATIONS, I’M HERE TO HELP. LET’S COLLABORATE AND CREATE SOMETHING REMARKABLE TOGETHER.</b>
+                                    <b>LET’S BRING YOUR IDEAS TO LIFE WITH INNOVATIVE AND EFFICIENT MOBILE APP SOLUTIONS. WHETHER YOU’RE LOOKING FOR A COMPLETE APP DESIGN, OPTIMIZATION OF YOUR CURRENT PROJECT, OR BACKEND INTEGRATIONS, I’M HERE TO HELP. LET’S COLLABORATE AND CREATE SOMETHING REMARKABLE TOGETHER.</b>
+                                </span>
+                            </span>
                         </p>
                         <p>
                             <a href="https://docs.google.com/document/d/e/2PACX-1vSXK6i8ydfJuDxqoYrL8DVANDnPfCmcoWEK8AzRWKVeDcjGe0bcyoVSGk9JVFGlTVPH24ncjF0gThhn/pub" class="btn btn-default btn-lg">Download My CV</a>
