--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
         #fh5co-started p {
             font-size: 18px;
             margin-bottom: 30px;
+            line-height: 1.5; /* Adjusted line height */
+            text-align: center; /* Center the text */
+            max-width: 800px; /* Set a max-width to control the text width */
+            margin-left: auto; /* Center the text block */
+            margin-right: auto; /* Center the text block */
         }
 
         #fh5co-started .btn {
@@ -170,6 +175,8 @@
             text-transform: uppercase;
             border-radius: 30px;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            display: block; /* Make the button a block element */
+            margin: 0 auto; /* Center the button */
         }
 
         #fh5co-started .btn:hover {
@@ -181,19 +188,24 @@
         .cd-words-wrapper {
             display: inline-block;
             position: relative;
-            text-align: left;
+            text-align: center;
+            width: 100%; /* Ensure full width */
         }
 
         .cd-words-wrapper b {
             display: inline-block;
             position: absolute;
-            white-space: nowrap;
+            white-space: normal; /* Allow text to wrap */
+            width: 100%; /* Ensure text takes full width */
             left: 0;
             top: 0;
+            opacity: 0;
+            text-align: center; /* Center the text */
         }
 
         .cd-words-wrapper b.is-visible {
             position: relative;
+            opacity: 1;
         }
 
         .cd-headline.clip .cd-words-wrapper {
@@ -231,7 +243,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class="col-md-8 text-center"> <!-- Removed offset -->
                         <div class="display-t js-fullheight">
                             <div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
                                 <div class="profile-thumb">
@@ -265,13 +277,13 @@
         <div id="fh5co-about" class="animate-box">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                    <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>About Me</h2>
                         <p>Discover my story, skills, and aspirations.</p>
                     </div>
                 </div>
                 <div class="row" style="margin-top: 40px;">
-                    <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 30px;">
+                    <div class="col-md-4" style="border-right: 1px solid #ddd; padding-right: 15px;"> <!-- Reduced padding -->
                         <ul class="info">
                             <li><i class="icon-user"></i><span><strong>Full Name:</strong></span> Menna Maher Elwan</li>
                             <li><i class="icon-phone"></i><span><strong>Phone:</strong></span> <a href="tel:+201127798986">+201127798986</a></li>
@@ -280,7 +292,7 @@
                             <li><i class="icon-location"></i><span><strong>Address:</strong></span> Qalyub, Alqaliobia, Egypt</li>
                         </ul>
                     </div>
-                    <div class="col-md-8" style="padding-left: 30px;">
+                    <div class="col-md-8" style="padding-left: 15px;"> <!-- Reduced padding -->
                         <h3>Hello There!</h3>
                         <p>
                             <span>I</span> <span>am</span> <span>a</span> <span>Mobile</span> <span>Developer</span> <span>with</span> <span>expertise</span> <span>in</span> <span>cross-platform</span> <span>app</span> <span>development</span> <span>using</span> <span><strong>Java</strong></span>, <span><strong>Dart</strong></span>, <span><strong>Kotlin</strong></span>, <span>and</span> <span><strong>Swift</strong></span>. <span>Skilled</span> <span>in</span> <span>optimizing</span> <span>app</span> <span>performance</span>, <span>integrating</span> <span>backend</span> <span>services</span>, <span>and</span> <span>enhancing</span> <span>user</span> <span>experience</span>. <span>I</span> <span>am</span> <span>committed</span> <span>to</span> <span>delivering</span> <span><strong>high-quality</strong></span>, <span><strong>secure</strong></span>, <span>and</span> <span><strong>scalable</strong></span> <span>applications</span> <span>that</span> <span>meet</span> <span>both</span> <span>user</span> <span>needs</span> <span>and</span> <span>business</span> <span>objectives</span>.
@@ -306,13 +318,13 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                    <div class="col-md-8 text-center fh5co-heading"> <!-- Removed offset -->
                         <h2>Work With Me</h2>
                         <p>
                             <span class="cd-headline clip is-full-width">
                                 <span class="cd-words-wrapper">
-                                    <b class="is-visible">Let's bring your ideas to life with innovative and efficient mobile app solutions. Whether you’re looking for a complete app design, optimization of your current project, or backend integrations, I’m here to help. Let’s collaborate and create something remarkable together.</b>
-                                    <b>With a passion for innovation and a focus on efficiency, I specialize in delivering top-notch mobile app solutions tailored to your needs. Whether you’re starting from scratch with a complete app design, optimizing an existing project, or integrating advanced backend systems, I’m here to make it happen.</b>
+                                    <b class="is-visible">LET'S BRING YOUR IDEAS TO LIFE WITH INNOVATIVE AND EFFICIENT MOBILE APP SOLUTIONS.<br>WHETHER YOU'RE LOOKING FOR A COMPLETE APP DESIGN, OPTIMIZATION OF YOUR CURRENT PROJECT, OR BACKEND INTEGRATIONS, I’M HERE TO HELP.</b>
+                                    <b>WITH A PASSION FOR INNOVATION AND A FOCUS ON EFFICIENCY, I SPECIALIZE IN DELIVERING TOP-NOTCH MOBILE APP SOLUTIONS.<br>WHETHER YOU’RE STARTING FROM SCRATCH WITH A COMPLETE APP DESIGN, OPTIMIZING AN EXISTING PROJECT, OR INTEGRATING ADVANCED BACKEND SYSTEMS, I’M HERE TO MAKE IT HAPPEN.</b>
                                 </span>
                             </span>
                         </p>
