--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p>&copy; All Rights Reserved. <br>Designed by
-                            <a href="https://menna3lwan.github.io" target="_blank">Menna Elwan</a>
+                            <a href="https://github.com/menna3lwan" target="_blank">Menna Elwan</a>
                         </p>
                     </div>
                 </div>
