--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             </span>
                         </p>
                         <p>
-                            <a href="https://docs.google.com/document/d/120XrxNC4Q8u9YzEG4r7e9q60W7vUs_PE3AahJV70ZHw/edit?usp=sharing/pub" class="btn btn-default btn-lg">Download My CV</a>
+                            <a href="https://docs.google.com/document/d/1UbGW_ABlCdnnVNOrKYVnkXvlmj1GUP7MqVFsWDPPOpA/edit?usp=sharing/edit?usp=sharing/pub" class="btn btn-default btn-lg">Download My CV</a>
                         </p>
                     </div>
                 </div>
