--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 </span>
                                 <p>
                                     <ul class="fh5co-social-icons">
-                                        <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/menna-elwan/" target="_blank"><i class="icon-linkedin2"></i></a></li>
                                         <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                                         <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
                                         <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
@@ -290,7 +290,7 @@
                         </p>
                         <div style="margin-top: 30px;">
                             <ul class="fh5co-social-icons">
-                                <li><a href="https://www.linkedin.com/in/menna-elwan-13572b251/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/menna-elwan/" target="_blank"><i class="icon-linkedin2"></i></a></li>
                                 <li><a href="https://github.com/menna3lwan" target="_blank"><i class="icon-github"></i></a></li>
                                 <li><a href="https://wa.me/+201127798986" target="_blank"><i class="icon-whatsapp"></i></a></li>
                                 <li><a href="mailto:menna3lwan@gmail.com" target="_blank"><i class="icon-email"></i></a></li>
